# federatedcode

./: .env  .gitignore  .readthedocs.yml  AUTHORS.rst  CHANGELOG.rst  Dockerfile  Makefile  README.rst  azure-pipelines.yml  configure  configure.bat  docker-compose.yml  docker.env  manage.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: docs-ci.yml  main.yml  pypi-release.yml
docs/: Makefile  application-settings.rst  command-line-interface.rst  conf.py  contributing.rst  data-models.rst  faq.rst  index.rst  installation.rst  introduction.rst  make.bat  schemas.rst  user-interface.rst
docs/scripts/: doc8_style_check.sh  sphinx_build_link_check.sh
docs/source/: application-settings.rst  command-line-interface.rst  conf.py  contributing.rst  faq.rst  index.rst  introduction.rst  rest-api.rst  schemas.rst
docs/source/contribute/: installation.rst  vocabulary.rst
etc/nginx/conf.d/: default.conf
etc/scripts/: fetch_thirdparty.py  gen_pypi_simple.py  utils_dejacode.py  utils_thirdparty.py
fedcode/: activitypub.py  admin.py  apps.py  forms.py  importer.py  models.py  schemas.py  signatures.py  signatures.py.ABOUT  utils.py  views.py
fedcode/management/commands/: gen-schema.py  tasks.py
fedcode/migrations/: 0001_initial.py  0001_squashed_0004_alter_review_remote_url.py  0002_alter_package_options_alter_federaterequest_done_and_more.py
fedcode/static/js/: vote.js
fedcode/static/pictogram-gh-pages/alpine/: alpine.svg.ABOUT
fedcode/templates/: base.html  create_review.html  footer.html  home.html  login.html  messages.html  navbar.html  note.html  pkg_list.html  pkg_profile.html  purl_list.html  repo_list.html  review.html  review_list.html  user_profile.html  user_sign_up.html
fedcode/templatetags/: webfinger_image.py
federatedcode/: asgi.py  settings.py  tasks.py  urls.py  wsgi.py
schemas/: package.schema.json  vulnerability.schema.json
tests/: __init__.py  docker-compose-dev-test-federation.yml  docker-compose-dev-test-federation1.env  docker-compose-dev-test-federation2.env  fedcode_test_utils.py  test_activitypub.py  test_ap_api.py  test_federation.py  test_importer.py  test_models.py  test_skeleton_codestyle.py  test_utils.py  test_vocabulary_toap.py  test_webfinger.py
tests/test_data/: mock_request_remote_purl.json
