[metadata]
name = skeleton
license = Apache-2.0

# description must be on ONE line https://github.com/pypa/setuptools/issues/1390
description = skeleton
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://github.com/nexB/skeleton

author = nexB. Inc. and others
author_email = info@aboutcode.org

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development
    Topic :: Utilities

keywords =
    utilities

license_files =
    apache-2.0.LICENSE
    NOTICE
    AUTHORS.rst
    CHANGELOG.rst
    CODE_OF_CONDUCT.rst

[options]
package_dir =
    =src
packages = find:
include_package_data = true
zip_safe = false

setup_requires = setuptools_scm[toml] >= 4

python_requires = >=3.7

install_requires =
    Django>=4.2.2
    psycopg2-binary>=3.1.12
    djangorestframework>=3.12.4
    django-oauth-toolkit>=2.3.0
    django-rest-framework>=0.1.0
    djangorestframework>=3.14.0
    django-environ>=0.10.0
    gunicorn>=21.2.0
    GitPython>=3.1.31
    requests>=2.31.0
    saneyaml>=0.6.0
    #
    httpx>=0.24.1
    http-message-signatures>=0.4.4

    anyio==4.1.0
    asgiref==3.7.2
    attrs==23.1.0
    black==23.7.0
    certifi==2023.5.7
    cffi==1.15.1
    charset-normalizer==3.1.0
    click==8.1.7
    cryptography==41.0.1
    dateparser==1.1.8
    Deprecated==1.2.14
    exceptiongroup==1.1.1
    gitdb==4.0.10
    h11==0.14.0
    http-sfv==0.9.8
    httpcore==0.17.3
    idna==3.4
    iniconfig==2.0.0
    isort==5.12.0
    jwcrypto==1.5.0
    mypy-extensions==1.0.0
    oauthlib==3.2.2
    packageurl-python==0.11.1
    packaging==23.1
    pathspec==0.11.2
    Pillow==9.5.0
    platformdirs==3.10.0
    pluggy==1.0.0
    pycparser==2.21
    pytest==7.3.2
    pytest-django==4.5.2
    python-dateutil==2.8.2
    pytz==2023.3
    regex==2023.8.8
    saneyaml==0.6.0
    six==1.16.0
    smmap==5.0.0
    sniffio==1.3.0
    sqlparse==0.4.4
    tomli==2.0.1
    typing_extensions==4.6.3
    tzlocal==5.0.1
    unidiff==0.7.5
    urllib3==2.0.3
    wrapt==1.15.0


[options.packages.find]
where = src


[options.extras_require]
testing =
    pytest >= 6, != 7.0.0
    pytest-xdist >= 2
    aboutcode-toolkit >= 7.0.2
    pycodestyle >= 2.8.0
    twine
    black
    isort

docs =
    Sphinx>=5.0.2
    sphinx-rtd-theme>=1.0.0
    sphinx-reredirects >= 0.1.2
    doc8>=0.11.2
    sphinx-autobuild
    sphinx-rtd-dark-mode>=1.3.0
    sphinx-copybutton

